# django-cloudrun-cookiecutter

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev_setup.sh  docker-compose.yaml  pyproject.toml  runtests.sh  settings.py  setup.cfg  shortcuts.sh
{{cookiecutter.directory_name}}/.cloudbuild/: deploy.yaml  pre_deploy.sh
{{cookiecutter.directory_name}}/.github/workflows/: actions.yml
{{cookiecutter.directory_name}}/utils/: secrets_helper.py
{{cookiecutter.directory_name}}/{{cookiecutter.application_name}}/: urls.py  wsgi.py
